<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/pictureId"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:src="@drawable/missing"
        android:scaleType="centerCrop"/>
    <TextView
        android:id="@+id/personName"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/pictureId"
        app:layout_constraintTop_toTopOf="@id/pictureId"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/nameTag"/>
    <TextView
        android:id="@+id/personBirth"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/pictureId"
        app:layout_constraintTop_toBottomOf="@id/personName"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="@dimen/largeRightMargin"
        android:text="@string/dateOfBirthTag"/>

    <TextView
        android:id="@+id/personDeath"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/personBirth"
        app:layout_constraintTop_toBottomOf="@id/personName"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="@dimen/smallLeftMargin"
        android:text="@string/diedTag"/>
    <TextView
        android:id="@+id/personDescription"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/personBirth"
        app:layout_constraintLeft_toRightOf="@id/pictureId"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/descriptionTag"
        android:inputType="textMultiLine"/>
</androidx.constraintlayout.widget.ConstraintLayout>